<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:gravity="center_horizontal">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="247dp"
        android:src="@drawable/image" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NaTur21"
        android:textColor="#0d6e6a"
        android:textSize="35dp"
        android:textStyle="bold"
        android:letterSpacing="0.03"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:id="@+id/usernameSignUp"
        android:inputType="textPersonName"
        android:background="@drawable/forget"
        android:hint="@string/Username"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:id="@+id/emailSignUp"
        android:inputType="textPersonName|textWebEmailAddress"
        android:background="@drawable/forget"
        android:hint="@string/Email"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"/>

    <EditText android:layout_width="350dp"
        android:layout_height="45dp"
        android:id="@+id/passwordSignUp"
        android:background="@drawable/forget"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"/>

    <EditText android:layout_width="350dp"
        android:layout_height="45dp"
        android:id="@+id/repeatPassSignUp"
        android:background="@drawable/forget"
        android:hint="@string/RepeatPassword"
        android:inputType="textPassword"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"/>

    <Button android:layout_width="350dp"
        android:layout_height="50dp"
        android:id="@+id/btnRegister"
        android:background="@drawable/button"
        android:text="Register"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:layout_marginTop="25dp"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alreadyHaveAccount"
        android:text="Already have an account? Sign In"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="15dp"/>

</LinearLayout>